# game-board-qt-template

./: CMakeLists.txt  README.md  canvas.cpp  canvas.h  qt_main.cpp  qt_main.h
